# CS231A-Head-Pose-Cursor-Control

./: .gitignore  .gitmodules  README.md  calibrate.sh  requirements.txt
calib/: cam_mats_left.npy  cam_mats_right.npy  dist_coefs_left.npy  dist_coefs_right.npy  e_mat.npy  f_mat.npy  proj_mats_left.npy  proj_mats_right.npy  rect_trans_left.npy  rect_trans_right.npy  rectification_map_left.npy  rectification_map_right.npy  rot_mat.npy  trans_vec.npy  undistortion_map_left.npy  undistortion_map_right.npy  valid_boxes_left.npy  valid_boxes_right.npy
ext/gazr/: CITATION  CMakeLists.txt  LICENSE  README.md  package.xml
ext/gazr/launch/: gazr.launch  gazr_gscam.launch
ext/gazr/src/: estimate_focus.cpp  facial_landmark_estimation.cpp  facial_landmark_estimation.hpp  head_pose_estimation.cpp  head_pose_estimation_ros.cpp  ros_head_pose_estimator.cpp  ros_head_pose_estimator.hpp
ext/gazr/tools/: benchmark_head_pose_estimation_single_frame.cpp  estimate_facial_landmarks.cpp  estimate_head_direction.cpp  live_plot.py  show_head_pose.cpp
src/: animation.py  demo_facial_landmarks.py  demo_head_pose.py  demo_head_pose_animation.py  demo_stabilization.py  demo_vispy.py  demo_webcam.py  facial_landmarks.py  head_pose.py  log_cursor.py  log_facial_landmarks.py  log_pose.py  log_triangulation.py  monitoring.py  render.py  scene_manager.py  signal.py  signal_processing.py  stereo_cameras.py  stereo_util.py  transform_util.py  util.py
src/shaders/: canvas.vert
src/utilities/: computation_chains.py  profiling.py  signal_processing.py  util.py
src/visuals/: .canvas.py.swp  axes.py  canvas.py  point_cloud.py  text.py  visuals.py
src/visuals/shaders/: canvas.frag  canvas.vert  mesh.frag  mesh.vert  point_cloud.frag  point_cloud.vert
